[package]
name = "esp-create-project"
version = "0.2.2"
authors = ["Alan Ramírez Herrera <alan5142@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.3.0"
console = "0.15"
dialoguer = "0.9"
zip = "0.5"
tempfile = "3.2"
anyhow = "1"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true       # Enable Link Time Optimization.
codegen-units = 4
